Ensure that wide images aren't squished in left-to-right view.

--- a/static/styles.css
+++ b/static/styles.css
@@ -148,6 +148,6 @@ ol#pages.leftToRight li {
     display: inline-block;
 }
 ol#pages.leftToRight li img {
-    max-width: auto;
+    max-width: initial;
     height: 100%;
 }
